--- a/Weitianshi/pages/message/applyProject/applyProject.wxml
+++ b/Weitianshi/pages/message/applyProject/applyProject.wxml
@@ -13,7 +13,7 @@
     <swiper-item>
       <scroll-view scroll-y="true" scroll-top="{{scroll}}" bindscrolltolower="moreForApply">
         <template is="allNumber" data="{{count:count1,text:'申请查看我的项目'}}"></template>
-        <template is="pushProject" data="{{contentList:contentList,type:0,record_id:record_id}}"></template>
+        <template is="newApplyProject" data="{{contentList:contentList,type:0,record_id:record_id}}"></template>
         <template is="hasNothing" data="{{emptyNumber:contentList}}"></template>
       </scroll-view>
     </swiper-item>
