--- a/Weitianshi/pages/my/sharePage/sharePage.wxml
+++ b/Weitianshi/pages/my/sharePage/sharePage.wxml
@@ -26,6 +26,55 @@
   <template wx:else is="topBlock"></template>
   <!--我的名片-->
   <template is="userInfo" data="{{user:user,count:count,text:'加他为人脉',show:0,IdentificationShow:0,playTime:1}}"></template>
+    <view style='background:white'>
+    <view class="contactIcon flex">
+      <view class="littleBox">
+        <image src="/img/iocn-weixin@2x.png" class="messageIconStyle"></image>
+      </view>
+      <view class="littleBox">
+        <image src="/img/icon-maimai@2x.png" class="messageIconStyle"></image>
+      </view>
+      <view class="littleBox">
+        <image src="/img/icon-zhihu@2x.png" class="messageIconStyle"></image>
+      </view>
+      <view class="littleBox">
+        <image src="/img/icon-weibo@2x.png" class="messageIconStyle"></image>
+      </view>
+      <view class="littleBox">
+        <image src="/img/icon-qq@2x.png" class="messageIconStyle"></image>
+      </view>
+      <view class="littleBox">
+        <image src="/img/icon-linkedin@2x.png" class="messageIconStyle"></image>
+      </view>
+    </view>
+    <view class="contactLine"></view>
+    <view class="user_down flex">
+      <view class="user_popularity user_tips contacts-sentimentm" bindtap="popularity">
+        <view wx:if="{{user.user_popularity}}">{{user.user_popularity}}</view>
+        <label class="popularityNum" wx:if="{{count.user_view_new && show ==1}}">+{{count.user_view_new}}</label>
+        <label class="popularityNum" wx:if="{{count.user_view_new==0 || show ==0}}"></label>
+        <view wx:if="{{!user.user_popularity}}" class="popularity-Num">{{count.user_view_all}}</view>
+        <view class="popularity-people">浏览过</view>
+      </view>
+      <!--加我为人脉-->
+      <view class="user_attention user_tips contacts-requestm" bindtap="attention">
+        <view wx:if="{{user.user_attention}}">{{user.user_attention}}</view>
+        <label class="attentionNum" wx:if="{{count.user_followed_new && show ==1}}">+{{count.user_followed_new}}</label>
+        <label class="popularityNum" wx:if="{{count.user_followed_new==0 || show ==0}}"></label>
+        <view wx:if="{{!user.user_attention}}" class="attention-Num">{{count.user_followed_all}}
+        </view>
+        <view class="attention-people">Ta的好友</view>
+      </view>
+      <!-- 潜在项目 -->
+      <view class="user_potential user_tips potential-projectm" bindtap="pushTo">
+        <view wx:if="{{user.user_potential}}">{{user.user_potential}}</view>
+        <label class="potentialNum" wx:if="{{count.project_push_new && show == 1}}">+{{count.project_push_new}}</label>
+        <label class="popularityNum" wx:if="{{count.project_push_new==0 || show ==0}}"></label>
+        <view wx:if="{{!user.user_attention}}" class="attention-Num">{{count.project_push_all}}</view>
+        <view class="potential-content">收到项目</view>
+      </view>
+    </view>
+  </view>
   <view class="downBox">
     <!--个人描述-->
     <template is="userIntro" data="{{user:user}}"></template>
