--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -106,4 +106,7 @@
   </view>
 </view>
 
-
+<!--筛选图标  -->
+<view class="search_img" hover-class='t-hoverColor' bindtap='tagFilter'>
+  <image src="/img/icon-shaixuan@2x.png"></image>
+</view>
