--- a/Weitianshi/utils/wxml/projectDetail.wxml
+++ b/Weitianshi/utils/wxml/projectDetail.wxml
@@ -259,3 +259,6 @@
 </button>
 <!--没有更多-->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
+
+<!--认证弹框  -->
+<template is="authenModel" data="{{status, group_id, authenModelBox}}"/>
