--- a/Weitianshi/pages/message/applyProject/applyProject.wxss
+++ b/Weitianshi/pages/message/applyProject/applyProject.wxss
@@ -1,5 +1,3 @@
-/* pages/message/applyProject/applyProject.wxss */
-
 page {
   background: #f3f4f8;
 }
@@ -37,8 +35,7 @@ page {
 }
 
 .browseMeTitle {
-  /*height: 90rpx;*/
-  margin: 32rpx 32rpx 32rpx 32rpx;
+  margin: 32rpx;
 }
 
 .browseMeTitle .num {
@@ -62,115 +59,23 @@ page {
   margin-right: 12rpx;
 }
 
-/*名片*/
-
-.outBox {
-  margin: 0 16px 0 16px;
-  width: auto;
-  height: auto;
-  position: relative;
-}
-
-.insideBox {
-  padding: 32rpx 32rpx 24rpx 32rpx;
-  background: #fff;
-  border-radius: 8rpx;
-}
-
-.outBox .describle {
-  font-size: 34rpx;
-  color: #666;
-  line-height: 38rpx;
-  text-align: left;
-  margin-bottom: 32rpx;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-}
-
 .allIndustry {
-  font-size: 26rpx;
-  color: #40587a;
-  line-height: 26rpx;
-  text-align: left;
-  margin-bottom: 24rpx;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.projectDetailLine {
+  background: #f5f5f5;
+  border-radius: 4rpx;
   padding: 0 16rpx;
-  border-right: 1rpx solid #999;
-}
-
-.projectDetailLight {
-  padding: 0 16rpx;
-  border-right: 1rpx solid #999;
-  color: #40587a;
-}
-
-.otherInfo {
-  position: relative;
-  padding-bottom: 30rpx;
-  border-bottom: 1rpx solid #e6e6e6;
-}
-
-.others_pic {
-  width: 40rpx;
-  height: 40rpx;
-  display: block;
+  height: 50rpx;
+  font-size: 24rpx;
+  color: #666;
+  line-height: 50rpx;
+  text-align: center;
   margin-right: 16rpx;
+  white-space: nowrap;
+  margin-bottom: 20rpx;
 }
 
-.projectDetailLine:first-child {
-  padding-left: 0;
-}
-
-.projectDetailLine:last-child {
-  border-right: none;
-}
-
-.projectDetailLight:first-child {
-  padding-left: 0;
-}
-
-.projectDetailLight:last-child {
-  border-right: none;
-}
-
-.allProjectDetail {
-  font-size: 26rpx;
-  color: #999;
-  line-height: 26rpx;
-  text-align: left;
-  margin-bottom: 34rpx;
-}
 
 .userInfo {
-  width: 566rpx;
-  margin-top: 9rpx;
-}
-
-.userCompany, .userCareer, .userName {
-  font-size: 22rpx;
-  color: #999;
-  line-height: 24rpx;
-  text-align: left;
-  width: 320rpx;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
-.userCareer, .userName {
-  margin-right: 16rpx;
-  white-space: nowrap;
-  width: auto;
-  text-overflow: clip;
-  overflow: none;
+  margin-bottom: 20rpx;
 }
 
 .projectInfo {
@@ -184,25 +89,6 @@ page {
   line-height: 24rpx;
   text-align: left;
   margin-top: 34rpx;
-}
-
-.haveInterest {
-  margin-left: 388rpx;
-  color: #999;
-}
-
-.btnHaveInterest, .btnNoInterest {
-  font-size: 24rpx;
-  color: #40587a;
-  border: 1px solid black;
-  height: 52rpx;
-  line-height: 52rpx;
-  padding: 0 32rpx;
-  margin: 20rpx 24rpx 0 185rpx;
-}
-
-.btnNoInterest {
-  margin: 20rpx 0 0 0;
 }
 
 #time {
@@ -297,28 +183,6 @@ page {
   margin-bottom: 84rpx;
 }
 
-.investmentGroup {
-  font-size: 26rpx;
-  color: #999;
-  line-height: 26rpx;
-  text-align: left;
-  margin-bottom: 24rpx;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.roundGroup {
-  margin-bottom: none;
-  font-size: 26rpx;
-  color: #999;
-  line-height: 26rpx;
-  text-align: left;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 .agreeBtn, .refuseBtn {
   font-size: 30rpx;
   line-height: 86rpx;
@@ -370,12 +234,22 @@ page {
 }
 
 .userPic {
-  width: 104rpx;
-  height: 104rpx;
+  width: 52rpx;
+  height: 52rpx;
   border-radius: 100%;
-  position: absolute;
-  right: 32rpx;
-  top: 32rpx;
+  margin-top: 8rpx;
+}
+
+.userPicText {
+  background: #f5f5f5;
+  font-size: 24rpx;
+  color: #333;
+  justify-content: center;
+  width: 52rpx;
+  height: 52rpx;
+  border-radius: 100%;
+  line-height: 52rpx;
+  margin-top: 8rpx;
 }
 
 .user_text {
@@ -411,8 +285,8 @@ page {
 .projectDetailType {
   height: 92rpx;
   width: 92rpx;
-  right: -3rpx;
-  top: -6rpx;
+  right: 0rpx;
+  top: 0rpx;
   position: absolute;
 }
 
@@ -430,7 +304,9 @@ page {
 }
 
 .agreeToRead {
-  color: #40587a;
+  font-size: 24rpx;
+  color: #999;
+  text-align: center;
 }
 
 .hightLight {
@@ -474,12 +350,6 @@ page {
   color: #40587a;
 }
 
-.investmentGroupContent, .roundGroupContent {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 .hide {
   display: none;
 }
@@ -495,7 +365,6 @@ page {
   border-radius: 4rpx;
   width: 136rpx;
   height: 52rpx;
-  /* margin-top: 18rpx; */
   position: absolute;
   right: 0;
   top: 20rpx;
@@ -523,10 +392,9 @@ page {
   border-top: 1rpx solid #e6e6e6;
   margin: 0 32rpx;
 }
-
 .t-line {
   width: 1rpx;
   height: 40rpx;
   background: #f0f0f0;
-  margin-top: 20rpx;
+  margin-top: 13rpx;
 }
