--- a/Weitianshi/pages/message/pushProject/pushProject.wxss
+++ b/Weitianshi/pages/message/pushProject/pushProject.wxss
@@ -68,52 +68,8 @@ page {
 
 /*名片*/
 
-.outBox {
-  margin: 0 16px 0 16px;
-  width: auto;
-  height: auto;
-  position: relative;
-}
-
-.insideBox {
-  padding: 32rpx 32rpx 24rpx 32rpx;
-  background: #fff;
-  border-radius: 8rpx;
-}
-
-.outBox .describle {
-  font-size: 34rpx;
-  color: #666;
-  line-height: 38rpx;
-  text-align: left;
-  margin-bottom: 32rpx;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-}
-
-.allIndustry {
-  font-size: 26rpx;
-  color: #40587a;
-  line-height: 26rpx;
-  text-align: left;
-  margin-bottom: 24rpx;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.projectDetailLine {
-  padding: 0 16rpx;
-  border-right: 1rpx solid #999;
-}
-
 .otherInfo {
   position: relative;
-  padding-bottom: 30rpx;
-  border-bottom: 1rpx solid #e6e6e6;
 }
 
 .others_pic {
@@ -187,8 +143,9 @@ page {
   height: 52rpx;
   line-height: 52rpx;
 }
-.addedSuccess{
-    color: #999;
+
+.addedSuccess {
+  color: #999;
   /* right: 32rpx; */
   white-space: nowrap;
   display: block;
@@ -198,10 +155,10 @@ page {
   line-height: 52rpx;
 }
 
-.btnHaveInterest, .btnNoInterest,.addProjectTo{
+.btnHaveInterest, .btnNoInterest, .addProjectTo {
   font-size: 24rpx;
-  color: #40587a;
-  border: 1px solid #40587a;
+  color: #3378e0;
+  border: 1px solid #3378e0;
   height: 52rpx;
   line-height: 52rpx;
   padding: 0 32rpx;
@@ -212,8 +169,8 @@ page {
 .btnHaveInterest {
   margin: 20rpx 0 0 0;
   padding: 0 8rpx;
-  color:#fff;
-  background:#40587a;
+  color: #fff;
+  background: #3378e0;
 }
 
 #time {
@@ -223,11 +180,12 @@ page {
   text-align: right;
   margin: 10rpx 0 20rpx 0;
 }
-.addProjectTo{
-    margin: 20rpx 0 0 0;
+
+.addProjectTo {
+  margin: 20rpx 16rpx 0 0;
   padding: 0 8rpx;
-  color:#40587a;
-  background:#fff;
+  color: #3378e0;
+  background: #fff;
 }
 
 /*==========我申请查看的项目===============  */
@@ -250,7 +208,6 @@ page {
 }
 
 .outsideBox {
-  margin: 0 30rpx;
   position: relative;
 }
 
@@ -262,12 +219,6 @@ page {
   line-height: 88rpx;
   text-align: left;
   height: 88rpx;
-  margin-left: 30rpx;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  justify-content: space-between;
-  width: 691rpx;
 }
 
 #introduce .introduce {
@@ -281,7 +232,7 @@ page {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  width: 670rpx;
+  width: 620rpx;
   padding-left: 32rpx;
 }
 
@@ -394,15 +345,6 @@ page {
   top: -2rpx;
 }
 
-.userPic {
-  width: 104rpx;
-  height: 104rpx;
-  border-radius: 100%;
-  position: absolute;
-  right: 32rpx;
-  top: 32rpx;
-}
-
 .redPoint {
   background: #f44c4c;
   width: 16rpx;
@@ -498,45 +440,35 @@ page {
 }
 
 .status {
-  font-size: 24rpx;
-  color: #40587a;
-  line-height: 88rpx;
-  text-align: right;
-  padding-right: 34rpx;
+  border-radius: 4rpx;
+  height: 36rpx;
+  font-size: 20rpx;
+  text-align: center;
+  position: absolute;
+  right: 20rpx;
+  top: 20rpx;
+  padding: 5rpx 8rpx;
 }
 
 .noRead {
-  color: #ccc;
+  color: #999;
+  background: rgba(204, 204, 204, 0.1);
 }
 
 .statusNoInterest {
-  color: #999;
+  background: rgba(249, 83, 85, 0.1) ;
+  color: #f95355;
+}
+
+.statusHasInterest {
+  background:rgba(71, 192, 85, 0.1);
+  color: #47c055;
+  width:76rpx;
 }
 
 .readed {
-  color: #40587a;
-}
-
-.projectDetailLight {
-  padding: 0 16rpx;
-  border-right: 1rpx solid #999;
-  color: #40587a;
-}
-
-.projectDetailLine:first-child {
-  padding-left: 0;
-}
-
-.projectDetailLine:last-child {
-  border-right: none;
-}
-
-.projectDetailLight:first-child {
-  padding-left: 0;
-}
-
-.projectDetailLight:last-child {
-  border-right: none;
+  color: #3378e0;
+  background: rgba(51, 120, 224, 0.1);
 }
 
 .noLight {
