--- a/Weitianshi/pages/message/potentialProject/potentialProject.wxss
+++ b/Weitianshi/pages/message/potentialProject/potentialProject.wxss
@@ -17,13 +17,19 @@
   border: none;
 }
 
-.on {
+.on::after {
+  content: '';
   color: #40587a;
+  width: 40rpx;
+  height: 4rpx;
+  border-radius: 4rpx;
   text-align: center;
-  font-size: 26rpx;
-  line-height: 80rpx;
-  border-bottom: 4rpx solid #40587a;
+  z-index: 666;
+  display: block !important;
+  background: #3378e0;
+  margin-left: 38%;
 }
+
 
 .empty {
   padding-top: 0;
@@ -493,4 +499,7 @@
   top: 185rpx;
   right: 67rpx;
   z-index: 99;
+}
+.project-detailm{
+  margin-bottom: 24rpx;
 }
