--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -1414,6 +1414,7 @@ textarea {
 .theBottomBox {
   justify-content: center;
   margin-top: 32rpx;
+  margin-bottom: 40rpx;
 }
 
 .t-nothingBottom {
@@ -1620,3 +1621,7 @@ textarea {
   width: 100%;
 }
 
+.t-highBox{
+  width: 100%;
+  height: 88rpx;
+}
