--- a/Weitianshi/pages/discover/discoverPerson/discoverPerson.wxml
+++ b/Weitianshi/pages/discover/discoverPerson/discoverPerson.wxml
@@ -16,7 +16,7 @@
       </view>
     </block>
     <template is="theBottom" wx:if="{{jiandi==true}}"></template>
-    <view class="high"></view>
+    <view class="t-highBox"></view>
   </scroll-view>
   <!--空状态-->
   <template is="isEmpty" data="{{emptyNumber:investorList}}"></template>
