--- a/Weitianshi/pages/message/applyProject/applyProject.wxml
+++ b/Weitianshi/pages/message/applyProject/applyProject.wxml
@@ -14,6 +14,8 @@
       <scroll-view scroll-y="true" scroll-top="{{scroll}}" bindscrolltolower="moreForApply">
         <template is="newApplyProject" data="{{contentList:contentList,type:0,record_id:record_id}}"></template>
         <template is="hasNothing" data="{{emptyNumber:contentList}}"></template>
+        <template is="theBottom" wx:if="{{jiandi == true}}"></template>
+        <view class="t-highBox"></view>
       </scroll-view>
     </swiper-item>
     <!--我申请查看的项目  -->
@@ -21,6 +23,8 @@
       <scroll-view bindscrolltolower="loadMore" scroll-top="{{scroll}}" scroll-y="true">
         <template is="personModal" data="{{list:applyList,type:1,push_id:0}}"></template>
         <template is="hasNothing" data="{{emptyNumber:applyList}}"></template>
+        <template is="theBottom" wx:if="{{atBottom == true}}"></template>
+        <view class="t-highBox"></view>
       </scroll-view>
     </swiper-item>
   </swiper>
