--- a/Weitianshi/pages/myProject/pushTo/pushTo.wxml
+++ b/Weitianshi/pages/myProject/pushTo/pushTo.wxml
@@ -45,9 +45,11 @@
     </scroll-view>
   </view>
 
-  <button disabled="{{clicked}}" class="floatBtn flex pushPro" bindtap="pushTo" hover-class='t-other-button-hover'>
-    <label class="pushProjectAfter">提交</label>
-  </button>
+  <!--按钮组  -->
+  <view class='buttonArry flex'>
+    <button class='reset' bindtap='createProject'>创建项目</button>
+    <button class='certain' hoverBlue='hoverBlue' bindtap='pushTo'>提交项目</button>
+  </view>
   <!-- 错误提示-->
   <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 </view>
