--- a/Weitianshi/utils/wxss/filterTag.wxss
+++ b/Weitianshi/utils/wxss/filterTag.wxss
@@ -59,7 +59,7 @@
 }
 
 .buttonArry .reset {
-  padding: 24rpx 76rpx;
+  padding: 24rpx 0;
   text-align: center;
   color: #293b55;
   border: 1px solid #293b55;
@@ -67,17 +67,20 @@
   margin-right: 32rpx;
   line-height: 1;
   font-size: 30rpx;
+  width: 218rpx;
 }
 
 .buttonArry .certain {
   background: #293b55;
-  padding: 24rpx 189rpx;
+  padding: 24rpx 0;
   text-align: center;
   border-radius: 4rpx;
   color: white;
   line-height: 1;
   font-size: 30rpx;
+  width: 440rpx;
 }
-.hoverBlue{
+
+.hoverBlue {
   color: #24344c;
 }
