--- a/Weitianshi/pages/message/applyProject/applyProject.wxss
+++ b/Weitianshi/pages/message/applyProject/applyProject.wxss
@@ -108,7 +108,7 @@ page {
   color: #999;
   line-height: 20rpx;
   text-align: right;
-  margin: 10rpx 0 20rpx 0;
+  margin: 10rpx 32rpx 20rpx 0;
 }
 
 /*==========我申请查看的项目===============  */
