--- a/Weitianshi/pages/message/pushProject/pushProject.wxss
+++ b/Weitianshi/pages/message/pushProject/pushProject.wxss
@@ -183,7 +183,7 @@ page {
   color: #999;
   line-height: 20rpx;
   text-align: right;
-  margin: 10rpx 0 20rpx 0;
+  margin: 10rpx 32rpx  20rpx 0;
 }
 
 .addProjectTo {
