--- a/Weitianshi/pages/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/projectDetail/projectDetail.wxss
@@ -16,8 +16,7 @@ scroll-view {
 }
 
 .investGroupBlock {
-  /* border-bottom: 0 !important; */
-  /* padding-bottom: 0; */
+  /* border-bottom: 0 !important; *//* padding-bottom: 0; */
 }
 
 /*我的项目卡片*/
@@ -425,7 +424,7 @@ scroll-view {
   color: #666;
   line-height: 50rpx;
   text-align: center;
-  margin:0 16rpx 20rpx 0;
+  margin: 0 16rpx 20rpx 0;
   white-space: nowrap;
   margin-bottom: 20rpx;
 }
@@ -746,7 +745,7 @@ button::after {
 }
 
 .title {
-   margin-bottom: 30rpx; 
+  margin-bottom: 30rpx;
   font-size: 15px;
   color: #333;
   /* line-height: 21px; */
@@ -1304,7 +1303,7 @@ button::after {
 
 .contactModalBox {
   height: 616rpx;
-  width: 506rpx;
+  width: 510rpx;
   background-color: white;
   margin-top: 206rpx;
   margin-left: 90rpx;
@@ -1312,10 +1311,34 @@ button::after {
   position: relative;
 }
 
+/* 认证弹框 */
+
+.authenModalBox {
+  border-radius: 8rpx;
+  height: 300rpx;
+  width: 572rpx;
+  background-color: white;
+  margin-top: 374rpx;
+  margin-left: 90rpx;
+  padding: 32rpx 0 0 0;
+  position: relative;
+}
+
+.authenModalTips {
+  font-size: 28rpx;
+  color: #666;
+  text-align: center;
+}
+
+.authenModalTop {
+  margin-top: 32rpx;
+  padding: 0 32rpx 0rpx 32rpx;
+}
+
 .modalTitle {
   font-size: 36rpx;
   color: #333;
-  line-height: 36rpx;
+  line-height: 50rpx;
   text-align: center;
 }
 
@@ -1354,6 +1377,26 @@ button::after {
   margin-top: 72rpx;
 }
 
+.authBtn {
+  width: 50%;
+  float: left;
+  height: 88rpx;
+  line-height: 88rpx;
+  margin-top: 50rpx;
+  font-size: 30rpx;
+  border-top: 2rpx solid #f0f0f0;
+}
+
+.tempBtn {
+  background: #3378e0;
+  color: #fff;
+  border-radius: 0 0 8rpx 0;
+}
+
+.noTempBtn {
+  border-radius: 0 0 0 8rpx;
+}
+
 .close {
   width: 48rpx;
   height: 48rpx;
@@ -1361,6 +1404,33 @@ button::after {
   top: 185rpx;
   right: 67rpx;
   z-index: 99;
+}
+
+.yesBtn {
+  border-radius: 0 0 8rpx 8rpx;
+  height: 88rpx;
+  line-height: 88rpx;
+  border-top: 2rpx solid #f0f0f0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  font-size: 15px;
+  color: #333;
+}
+
+.bottomBtn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.tempReloadBtn {
+  font-size: 15px;
+  color: #3378e0;
+  border-left: 2rpx solid #f0f0f0;
+  border-radius: 0 0 8rpx 0;
 }
 
 /*打分  */
