--- a/Weitianshi/pages/message/pushProject/pushProject.wxss
+++ b/Weitianshi/pages/message/pushProject/pushProject.wxss
@@ -15,7 +15,7 @@ page {
   display: inline-block;
   width: 50%;
   font-size: 26rpx;
-  color: #999;
+  color: #333;
   line-height: 62rpx;
   text-align: center;
   border: none;
@@ -163,7 +163,7 @@ page {
 .btnHaveInterest, .btnNoInterest, .addProjectTo {
   font-size: 24rpx;
   color: #3378e0;
-  border: 1px solid #3378e0;
+  border: 1rpx solid #3378e0;
   height: 52rpx;
   line-height: 52rpx;
   padding: 0 32rpx;
@@ -179,11 +179,11 @@ page {
 }
 
 #time {
-  font-size: 20rpx;
+  font-size: 22rpx;
   color: #999;
-  line-height: 20rpx;
+  line-height: 32rpx;
   text-align: right;
-  margin: 10rpx 32rpx  20rpx 0;
+  margin: 12rpx 32rpx 32rpx 0;
 }
 
 .addProjectTo {
@@ -450,8 +450,8 @@ page {
   font-size: 20rpx;
   text-align: center;
   position: absolute;
-  right: 20rpx;
-  top: 20rpx;
+  right: 32rpx;
+  top: 42rpx;
   padding: 5rpx 8rpx;
 }
 
