--- a/Weitianshi/pages/message/pushProject/pushProject.wxss
+++ b/Weitianshi/pages/message/pushProject/pushProject.wxss
@@ -173,7 +173,7 @@ page {
 
 .btnHaveInterest {
   margin: 20rpx 0 0 0;
-  padding: 0 8rpx;
+  padding: 0 20rpx;
   color: #fff;
   background: #3378e0;
 }
@@ -188,7 +188,7 @@ page {
 
 .addProjectTo {
   margin: 20rpx 16rpx 0 0;
-  padding: 0 8rpx;
+  padding: 0 20rpx;
   color: #3378e0;
   background: #fff;
 }
@@ -229,8 +229,8 @@ page {
 #introduce .introduce {
   background: #fafafa;
   border-radius: 4rpx 4rpx 0 0;
-  font-size: 26rpx;
-  color: #666;
+  font-size: 30rpx;
+  color:;
   line-height: 88rpx;
   text-align: left;
   height: 88rpx;
