--- a/Weitianshi/pages/message/applyProject/applyProject.wxss
+++ b/Weitianshi/pages/message/applyProject/applyProject.wxss
@@ -143,7 +143,7 @@ page {
 }
 
 #introduce .introduce {
-  background: #fafafa;
+  background: #F9FAFC;
   border-radius: 4rpx 4rpx 0 0;
   font-size: 30rpx;
   color: #333;
