--- a/Weitianshi/pages/message/applyPerson/applyPerson.wxss
+++ b/Weitianshi/pages/message/applyPerson/applyPerson.wxss
@@ -173,7 +173,7 @@ page {
 .btnHaveInterest, .btnNoInterest {
   font-size: 24rpx;
   color: #40587a;
-  border: 1px solid black;
+  border: 1rpx solid black;
   height: 52rpx;
   line-height: 52rpx;
   padding: 0 32rpx;
@@ -182,15 +182,16 @@ page {
 
 .btnNoInterest {
   margin: 20rpx 0 0 0;
+  padding: 0 20rpx;
 }
 
 
 #time {
-  font-size: 20rpx;
+  font-size: 22rpx;
   color: #999;
-  line-height: 20rpx;
+  line-height: 32rpx;
   text-align: right;
-  margin: 10rpx 0 20rpx 0;
+  margin: 12rpx 32rpx 32rpx 0;
 }
 /*==========我申请查看的项目===============  */
 
