--- a/Weitianshi/pages/message/potentialProject/potentialProject.wxss
+++ b/Weitianshi/pages/message/potentialProject/potentialProject.wxss
@@ -127,14 +127,16 @@
 .btnHaveInterest, .btnNoInterest, .addProjectTo {
   font-size: 24rpx;
   color: #3378e0;
-  border: 1px solid #3378e0;
+  border: 1rpx solid #3378e0;
   height: 52rpx;
   line-height: 52rpx;
   padding: 0 32rpx;
   margin: 20rpx 16rpx 0 16rpx;
   border-radius: 4rpx;
 }
-
+.btnNoInterest {
+  padding: 0 20rpx;
+}
 .btnHaveInterest {
   margin: 20rpx 0 0 0;
   padding: 0 20rpx;
